# core

./: .env  .gitignore  Pipfile  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml
Nova/: celery.py  hosts.py  settings.py  urls.py  wsgi.py
assets/fonts/: flaticon.css
assets/js/: contact-form-script.js
core/: asgi.py  hosts.py  settings.py  urls.py  wsgi.py
main_site/: urls.py  views.py
nova_api/: serializers.py  urls.py  views.py
nova_dash/: admin.py  app_views.py  apps.py  feature_view.py  models.py  tasks.py  urls.py  utility.py  utility_view.py  views.py
nova_dash/migrations/: 0001_initial.py  0002_auto_20201206_1844.py  0003_auto_20201206_1845.py  0004_customer_avatar.py  0005_auto_20201206_2005.py  0006_auto_20201208_1000.py  0009_auto_20201210_1523.py  0013_auto_20201210_2224.py  0014_app_stack.py  0019_auto_20201210_2305.py  0021_auto_20201210_2333.py  0022_auto_20201211_0200.py  0023_auto_20201211_0202.py  0024_auto_20201211_2133.py  0025_auto_20201212_1415.py  0027_auto_20201216_1739.py  0030_folder_folder.py  0032_remove_app_data.py  0033_auto_20201221_0153.py  0034_auto_20201221_0204.py  0035_auto_20201221_0207.py  0036_auto_20201221_0213.py  0038_folder_contents.py  0039_remove_folder_contents.py  0040_auto_20201221_0236.py  0041_auto_20201221_1336.py  0042_auto_20201222_0042.py  (+30 more)
templates/: about.html  contact.html  database-hosting.html  discord-hosting.html  index-2.html  index-3.html  index.html  privacy-policy.html  terms-condition.html
utils/: handlers.py  hashing.py  misc.py  mixins.py  oauth.py  operations.py
(+208 files in other folders)
