[tool.poetry]
name = "bitship"
version = "0.1.0"
description = ""
authors = ["ryuga <vaishnav2353@gmail.com>"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
requests = "^2.27.1"
django-ipware = "^4.0.2"
python-decouple = "^3.5"
django-hosts = "^5.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
djangorestframework = "^3.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
